# patkit

./: .gitignore  README.md  citations.bib  pyproject.toml  rudimentary_tests.sh  satkit.py  satkit_publish.py  satkit_simulate.py  test_data.markdown
.github/workflows/: release.yaml  test_release.yaml
configuration/: satkit_gui_parameters.yaml
derived_data/tongue_data_1/: satkit_data_run_parameters.yaml  satkit_publish_parameters.yaml
devel/: doc_generation_commands  generate_docs.py  gpl-v3_and_CC-BY-NC-SA.tmpl  licenseheaders_command
docs/: Changelog.markdown  Configuration.markdown  Development_guide.markdown  DirectoryStructure.markdown  Installing_and_using.markdown  ModalitiesforRecordedData.markdown  ModalitiesinPractice.markdown  SATKIT_development_guide.markdown  Saving_and_loading.markdown  SetupForDevelopment.markdown  Splines.markdown  WritingNewModality.markdown  index.md
docs/api/: index.html  patkit.html  search.js
example_configs/downsampling/: data_run_parameters.yaml  gui_parameters.yaml
example_configs/old_examples/: configuration.yaml  exclusion_list_P3_day6.yaml  satkit_data_run_parameters.yaml  satkit_gui_parameters.yaml  satkit_publish_parameters.yaml
example_configs/regular_example/: configuration.yaml  satkit_data_run_parameters.yaml
example_configs/ultrafest24/: configuration.yaml  satkit_gui_parameters.yaml  satkit_simulation_parameters.yaml  simulation_parameters.yaml
old_script_files/: example_spline_script.py  publish.py  satkit.py  satkit_publish.py  satkit_simulate.py
recorded_data/spline_test_token1/: session_config.yaml  spline_config.yaml
regular_example/: satkit_publish_parameters.yaml
satkit/: cli.py  constants.py  interpolate_raw_uti.py  qt_annotator.py  satkit.py  satkit_click.py
scripts/: dat_to_wav.py  generate_docs.py
(+276 files in other folders)
