
[project]
authors = [
  {email = "giuthas@gmail.com"},
  {name = "Pertti Palo, Scott Moisik, Matthew Faytak, Motoki Saito"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
#  "Intended Audience :: Speech researchers and students",
]
description = "Speech Articulation ToolKit: tools for processing ultrasound speech data"
keywords = ["speech", "articulation", "textgrid", "ultrasound", "splines"]
license = {file = "LICENSE.markdown"}
maintainers = [
  {name = "Pertti Palo", email = "giuthas@gmail.com"},
]
name = "satkit"
readme = "README.md"
requires-python = ">=3.10.13"
version = "0.14"
dependencies = [
  "build>=1.2.2.post1",
  "click>=8.1.8",
  "dipy>=1.10.0",
  "icecream>=2.1.3",
  "licenseheaders>=0.8.8",
  "matplotlib>=3.10.0",
  "more-itertools>=10.5.0",
  "nestedtext>=3.7",
  "numpy>=2.2.1",
  "opencv-python>=4.10.0.84",
  "pdoc>=15.0.1",
  "praat-textgrids>=1.4.0",
  "pydantic>=2.10.4",
  "pydicom>=3.0.1",
  "pylint>=3.3.3",
  "pyqt6>=6.8.0",
  "scipy>=1.15.0",
  "seaborn>=0.13.2",
  "setuptools>=75.7.0",
  "sk-video>=1.1.10",
  "strictyaml>=1.7.3",
  "virtualenv>=20.28.1",
]


[project.urls]
bug_tracker = "https://github.com/giuthas/satkit/issues"
changelog = "https://github.com/giuthas/satkit/blob/main/docs/Release_notes.markdown"
documentation = "https://giuthas.github.io/satkit/"
homepage = "github.com/giuthas/satkit"
repository = "github.com"

[project.scripts]
satkit = "satkit:run_cli"

#[project.gui-scripts]
#satkit-gui = "satkit:main_gui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/satkit"]

[tool.hatch.build.targets.wheel]
packages = ["src/satkit"]
